update socket connect, add list recyclerview

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,27 +6,9 @@
     android:orientation="vertical">
 
 
-    <TextView
-        android:id="@+id/tvtotal"
+    <FrameLayout
+        android:id="@+id/mainframe"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Total : 0"
-        android:textColor="@color/colorPrimary"
-        android:textSize="30sp"
-        android:textStyle="italic" />
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </ScrollView>
-
-    <ListView
-        android:id="@+id/listview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@android:color/background_dark" />
-
+        android:layout_height="match_parent" />
 </LinearLayout>
 
