--- a/app/src/main/res/layout/fragment_data_list.xml
+++ b/app/src/main/res/layout/fragment_data_list.xml
@@ -1,28 +1,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?android:attr/detailsElementBackground"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvtotal"
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Total : 0"
-        android:textColor="@color/colorPrimary"
-        android:textSize="30sp"
-        android:textStyle="italic" />
+        android:layout_margin="4dp"
+        card_view:cardCornerRadius="4dp">
 
-    <!--<ListView-->
-        <!--android:id="@+id/listview"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:background="@android:color/holo_green_light" />-->
+        <TextView
+            android:id="@+id/tvtotal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Total : 0"
+            android:textColor="@color/colorPrimary"
+            android:textSize="30sp"
+            android:textStyle="italic" />
+    </android.support.v7.widget.CardView>
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/datalistrv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark" />
+        android:layout_height="wrap_content" />
 </LinearLayout>
