--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#000000</color>
-    <color name="colorPrimaryDark">#101010</color>
-    <color name="colorAccent">#ff4081</color>
+    <color name="colorPrimary">#1d9698</color>
+    <color name="colorPrimaryDark">#1dabad</color>
+    <color name="colorAccent">#ff0000</color>
     <color name="colorlive">#15ff00</color>
 </resources>
